# life4-dashboard

./: .gitignore  README.md  app.py  data.xlsx  main.py  pyproject.toml
.github/workflows/: empty_commit.yaml
src/life4/: __init__.py  ddr.py  life4_ui.py  requirements.py
src/life4/data/: backends.py  interfaces.py
src/life4/life4/: core.py
src/life4/life4/ranks/: a20_plus.py  requirements.py
src/life4/rank_requirements/: a20_plus.py  a3.py
src/life4/rank_requirements/a20_plus/: amethyst.py  pearl.py
src/life4/ui/: life4_ui.py
